# payloadguard-evidence

./: .gitignore  CLAUDE.md  DEVLOG.md  HANDOFF.md  KNOWN_LIMITATIONS.md  LICENSE  OPERATIONS_MANUAL.md  PAYLOADGUARD_MERGE_FINDINGS.md  PayloadGuard-Evidence-Blueprint-1.md  README.md  REVIEW_PROTOCOL.md  SYSTEM_BLUEPRINT.md  SYSTEM_REFERENCE.md  TEST_CATALOG.md  audit_data.json  build_full_system.py  build_system_architecture.py  generate_formal_report.py  generate_matrix.py  generate_regulatory_report.py  payloadguard-evidence-roadmap-phaseB-to-C.md  pyproject.toml  requirements.txt  run_system_audit.py
dashboards/: README.md  blueprint.html  phase-c-closure-review.html  status-findings.html
evidence/: citation_gate.py  citation_registry.py  cli.py  conflict.py  contract_attestation.py  dafny_adapter.py  dafny_isolate.py  dafny_mutate.py  dafny_nl_summary.py  dafny_spec_lint.py  frozen_contract.py  gate_c5_runner.py  hazard_id_lint.py  literal_citation.py  model.py  polish_lint.py  reconcile.py  source_anchored_review.py  spec_impl_gap.py  test_catalog.py  tracked_files.py  verify_tr24971_iec62304_citations.py
sources/: CEN-ISO-TR-24971-2020-E.docx  README.md  ckd-epi-2021-and-cockcroft-gault-verification.md  emc-smpc-apixaban-posology-2024.md  emc-smpc-dabigatran-indications-2025.md  fda-eliquis-label-interactions-2016.md  gip-v1.0-hazard-analysis.md  iso-26262-3-2018-table4-and-6.4.4.md  kdigo-2024-gfr-staging.md  mhra-dsu-doac-renal-dosing-2023.md  mhra-renal-formula-selection-2019.md  nhtsa-fmvss-127-2024.md  req-gip-1-4-12-alarm-scope-decision.md  sps-doac-interactions-2024.md
tests/: conftest.py  test_aeb_kernel_matrix.py  test_aeb_kernel_mutation_report.py  test_aeb_kernel_spec_lint.py  test_binder_equivalence.py  test_citation_gate.py  test_citation_registry.py  test_cli.py  test_conflict_check.py  test_contract_attestation.py  test_dafny_adapter.py  test_dafny_isolate.py  test_dafny_mutate.py  test_dafny_nl_summary.py  test_dafny_spec_lint.py  (+32 more)
(+196 files in other folders)
